# aqeea_pkg

./: README.md  pyproject.toml  requirements.txt  setup.py
aqeea/: __init__.py  __main__.py  dict.py  download.py  listing.py  read.py
examples/data/latest/: RS_PM10.csv  summary.json
examples/data/uptodate/: RS_5_44117_2023_timeseries.csv  RS_5_44124_2023_timeseries.csv  RS_5_44131_2023_timeseries.csv  RS_5_44144_2023_timeseries.csv  RS_5_44176_2023_timeseries.csv  RS_5_70790_2023_timeseries.csv  RS_5_70795_2023_timeseries.csv  RS_5_70797_2023_timeseries.csv  RS_5_70798_2023_timeseries.csv  RS_5_70799_2023_timeseries.csv  RS_5_70800_2023_timeseries.csv  RS_5_70801_2023_timeseries.csv  RS_5_70802_2023_timeseries.csv  listing_CountryCode=RS_CityName=_Pollutant=5_Year_from=2023_Year_to=2023_Station=_Samplingpoint=_Source=E2a_Output=CSV_UpdateDate=_TimeCoverage=Year.csv  spo_pol_id_file.csv
examples/data/validated/: RS_5_44117_2021_timeseries.csv  RS_5_44131_2021_timeseries.csv  RS_5_44144_2021_timeseries.csv  RS_5_44176_2021_timeseries.csv  listing_CountryCode=RS_CityName=_Pollutant=5_Year_from=2021_Year_to=2021_Station=_Samplingpoint=_Source=E1a_Output=CSV_UpdateDate=_TimeCoverage=Year.csv  spo_pol_id_file.csv
examples/scripts/: 1-retrieve aq data from EEA.ipynb
examples/scripts/.ipynb_checkpoints/: 2-read data from blob-checkpoint.ipynb
